--- a/main.css
+++ b/main.css
@@ -88,6 +88,10 @@ a.btn {
   text-decoration: none;
 }
 
+a.btn:hover {
+  background: #ccc;
+}
+
 /*tablet styles*/
 @media screen and (min-width: 768px) {
   .container {
